# cppps

./: .gitignore  CMakeLists.txt  K.csv  cropper.py  light_positions.json
src/: MatrixProcessing.cpp  MatrixProcessing.h  cppPS.cpp  depthMapHandler.cpp  depthMapHandler.h  imagePreprocessing.cpp  imagePreprocessing.h  optProblem.cpp  optProblem.h
src/Interface/: MainWindow.cpp  MainWindow.h
src/Interface/widgets/: CameraParametersWidget.cpp  CameraParametersWidget.h  IndicatorSpheresWidget.cpp  IndicatorSpheresWidget.h  ObjectParametersWidget.cpp  ObjectParametersWidget.h  PhotoDirectoryWidget.cpp  PhotoDirectoryWidget.h  RegionsOfInterestWidget.cpp  RegionsOfInterestWidget.h
